--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -14,9 +14,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 3
+      max-parallel: 4
+      fail-fast: false
       matrix:
         python-version: [3.7, 3.8, 3.9]
+        script_collection:
+          - exp_ctrl
+          - plots
+        exclude:
+          - script_collection: plots
+            python-version: 3.7
+          - script_collection: plots
+            python-version: 3.8
 
     steps:
     - uses: actions/checkout@v2
@@ -31,8 +40,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox
-    - name: Test exp_ctrl scripts
+    - name: Test ${{ matrix.script_collection }} scripts
       run: |
-        cd scripts/exp_ctrl
-        pyenv="py$(echo "${{ matrix.python-version }}" | tr -d '.')"
-        tox -e lint,flake8,black,${pyenv}-test
+        cd scripts/${{ matrix.script_collection }}
+        toxenvs="lint,flake8,black"
+        case ${{ matrix.script_collection }} in
+        exp_ctrl)
+            pyenv="py$(echo "${{ matrix.python-version }}" | tr -d '.')"
+            toxenvs="${toxenvs},${pyenv}-test"
+            ;;
+        *)  ;;
+        esac
+        tox -e ${toxenvs}
