--- a/scripts/plots/tox.ini
+++ b/scripts/plots/tox.ini
@@ -1,19 +1,30 @@
 [tox]
-envlist = lint,flake8,black
+envlist = lint,flake8,black,{py37,py38,py39}-{test}
 skip_missing_interpreters = true
 skipsdist = true
 
 [testenv]
 deps =
+    test:       {[testenv:test]deps}
     lint:       {[testenv:lint]deps}
     flake8:     {[testenv:flake8]deps}
     black:      {[testenv:black]deps}
     check_package:  {[testenv:check_package]deps}
 commands =
+    test:       {[testenv:test]commands}
     lint:       {[testenv:lint]commands}
     flake8:     {[testenv:flake8]commands}
     black:      {[testenv:black]commands}
     check_package:  {[testenv:check_package]commands}
+
+[testenv:test]
+deps =
+    pytest
+    pytest-cov
+    pytest-mock
+    -rrequirements.txt
+commands =
+    pytest {posargs}
 
 [testenv:lint]
 deps =
