apps/requester, scripts/exp_ctrl: log netstats and pktbuf

--- a/apps/requester/Makefile
+++ b/apps/requester/Makefile
@@ -16,10 +16,13 @@ USEMODULE += ipv4_addr
 USEMODULE += ipv6_addr
 USEMODULE += gnrc_icmpv6_echo
 USEMODULE += gnrc_ipv6_default
+USEMODULE += gnrc_pktbuf_cmd
 USEMODULE += gnrc_rpl
 USEMODULE += netdev_default
+USEMODULE += netstats_l2
 USEMODULE += prng_sha256prng
 USEMODULE += ps
+USEMODULE += od
 USEMODULE += shell
 USEMODULE += shell_commands
 USEMODULE += sock_async_event
