--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Install LaTeX and matplotlib dependencies (for plots)
       if: matrix.script_collection == 'plots'
       run: |
-        sudo apt-get install texlive-xetex python3-matplotlib
+        sudo apt-get install texlive-full python3-matplotlib
     - name: Test ${{ matrix.script_collection }} scripts
       run: |
         cd scripts/${{ matrix.script_collection }}
