apps/requester: export environment variables to docker

--- a/apps/requester/Makefile
+++ b/apps/requester/Makefile
@@ -111,6 +111,25 @@ ifeq (0, $(ASYNC))
   CFLAGS += -D"DNS_TRANSPORT_SYNC"
 endif
 
+DOCKER_ENV_VARS += ASYNC
+DOCKER_ENV_VARS += DEFAULT_CHANNEL
+DOCKER_ENV_VARS += DEVELHELP
+DOCKER_ENV_VARS += DNS_TRANSPORT
+DOCKER_ENV_VARS += ETHOS_BAUDRATE
+DOCKER_ENV_VARS += KCONFIG_ADD_CONFIG
+DOCKER_ENV_VARS += ON_BR
+DOCKER_ENV_VARS += ONLY_FETCH
+DOCKER_ENV_VARS += OSCOREBASE
+DOCKER_ENV_VARS += QUERY_COUNT
+DOCKER_ENV_VARS += PROXIED
+DOCKER_ENV_VARS += VERBOSE_ASSERT
+DOCKER_ENV_VARS += SHOULD_RUN_KCONFIG
+DOCKER_ENV_VARS += SITE_PREFIX
+DOCKER_ENV_VARS += STATIC_ROUTES
+DOCKER_ENV_VARS += TAP
+DOCKER_ENV_VARS += USEMODULE
+DOCKER_MAKE_ARGS ?= -j
+
 include $(RIOTBASE)/Makefile.include
 
 .PHONY: host-tools
