scan_iot_data: adopt to scan YourThings/IoTFinder data

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *~
+*doi-*-iot-data/
+*doi-*-iot-data.csv
 *.tgz
 *.tgz.csv
 *.tgz.bkp.csv
+*.bkp.csv.gz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
