--- a/scripts/plots/tox.ini
+++ b/scripts/plots/tox.ini
@@ -32,7 +32,7 @@ deps =
     pytest
     -rrequirements.txt
 commands =
-    pylint --rcfile=setup.cfg . dns_iot_ren_imc19_data
+    pylint --rcfile=setup.cfg . dns_iot_data_preparse
 
 [testenv:flake8]
 deps =
