--- a/scripts/plots/requirements.txt
+++ b/scripts/plots/requirements.txt
@@ -1,8 +1,9 @@
 matplotlib<3.5>=3.4
 networkx<2.7>=2.6
-pydot<1.5>=1.4
 pandas<1.5>=1.4
 publicsuffix2==2.20191221
+pydot<1.5>=1.4
+python-dateutil<2.9>=2.8
 pyyaml<6.1>=6.0
 riotctrl==0.5.0
 scapy<2.5>=2.4
