--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -14,16 +14,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 6
+      max-parallel: 4
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.9', '3.8', '3.7']
         script_collection:
           - 05-dns-empirical/collect
           - 05-dns-empirical/plot
           - scripts/exp_ctrl
           - scripts/plots
-
+        include:
+          - python-version: '3.10'
+            script_collection: 05-dns-empirical/collect
+          - python-version: '3.10'
+            script_collection: 05-dns-empirical/plot
     steps:
     - uses: actions/checkout@v2
       with:
@@ -38,7 +42,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox
     - name: Install LaTeX and matplotlib dependencies (for plots)
-      if: matrix.script_collection == 'scripts/plots' || matrix.script_collection == '05-dns-empirical/plot'
+      if: contains(matrix.script_collection, 'plot')
       run: |
         sudo apt-get update
         sudo apt-get install texlive-full python3-matplotlib
