--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -53,7 +53,8 @@ jobs:
         path: opt
         key: ${{ runner.os }}-arm-toolchain-10.3-2021.07
     - name: Install dependencies
-      run:
+      run: |
+        sudo apt-get update
         sudo apt-get install build-essential make
     - name: Install ARM toolchain
       if: steps.cache-arm-toolchain.outputs.cache-hit != 'true'
