--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -45,14 +45,15 @@ jobs:
       if: contains(matrix.script_collection, 'plot')
       run: |
         sudo apt-get update
-        sudo apt-get install texlive-full python3-matplotlib
+        sudo apt-get install cm-super-minimal dvipng python3-matplotlib texlive texlive-latex-extra
     - name: Test ${{ matrix.script_collection }} scripts
       run: |
         cd ${{ matrix.script_collection }}
         pyenv="py$(echo "${{ matrix.python-version }}" | tr -d '.')"
         toxenvs="lint,flake8,black,${pyenv}-test"
         tox -e ${toxenvs}
-    - if: matrix.script_collection == 'scripts/plots'
+    - name: Provide script_collection to actions/upload-artifact
+      if: matrix.script_collection == 'scripts/plots'
       env:
         script_collection: ${{ matrix.script_collection }}
       run: |
