--- a/scripts/exp_ctrl/setup.cfg
+++ b/scripts/exp_ctrl/setup.cfg
@@ -20,6 +20,7 @@ reports = no
 max-line-length = 88
 disable = locally-disabled,star-args,consider-using-f-string
 msg-template = {path}:{line}: [{msg_id}({symbol}), {obj}] {msg}
+min-similarity-lines = 11
 
 [flake8]
 max-line-length = 88
