--- a/scripts/exp_ctrl/tox.ini
+++ b/scripts/exp_ctrl/tox.ini
@@ -34,6 +34,8 @@ deps =
 commands =
     pylint --rcfile=setup.cfg \
         create_load_descs.py \
+        create_proxy_descs.py \
+        create_max_age_descs.py \
         dispatch_load_experiments.py \
         tests/
 
