exp_ctrl: remove outdated pylint suppression

--- a/06-07-evaluation/scripts/exp_ctrl/setup.cfg
+++ b/06-07-evaluation/scripts/exp_ctrl/setup.cfg
@@ -18,7 +18,7 @@ omit =
 [pylint]
 reports = no
 max-line-length = 88
-disable = locally-disabled,star-args,consider-using-f-string
+disable = locally-disabled,consider-using-f-string
 msg-template = {path}:{line}: [{msg_id}({symbol}), {obj}] {msg}
 min-similarity-lines = 11
 
