exp_ctrl: increase test coverage

--- a/06-07-evaluation/scripts/exp_ctrl/tox.ini
+++ b/06-07-evaluation/scripts/exp_ctrl/tox.ini
@@ -37,6 +37,8 @@ commands =
         create_proxy_descs.py \
         create_max_age_descs.py \
         dispatch_load_experiments.py \
+        dispatch_proxy_experiments.py \
+        dispatch_max_age_experiments.py \
         tests/
 
 [testenv:flake8]
