--- a/06-07-evaluation/scripts/plots/requirements.txt
+++ b/06-07-evaluation/scripts/plots/requirements.txt
@@ -1,10 +1,10 @@
-matplotlib<3.6>=3.5
-networkx<2.7>=2.6
-pandas<1.5>=1.4
-publicsuffix2==2.20191221
-pydot<1.5>=1.4
-python-dateutil<2.9>=2.8
-pyyaml<6.1>=6.0
-riotctrl==0.5.0
-scapy<2.5>=2.4
-scipy<1.8>=1.7
+matplotlib
+networkx
+pandas
+publicsuffix2
+pydot
+python-dateutil
+pyyaml
+riotctrl
+scapy
+scipy
