--- a/06-07-evaluation/apps/requester/Makefile
+++ b/06-07-evaluation/apps/requester/Makefile
@@ -38,7 +38,9 @@ WITH_CACHE ?= 0
 ASYNC ?= 1
 
 ifeq (1,$(PROXIED))
-  USEMODULE += l2filter_whitelist
+  ifneq (,$(WHITELIST_NAME))
+    USEMODULE += l2filter_whitelist
+  endif
 endif
 
 ifeq (1,$(ON_BR))
@@ -125,6 +127,9 @@ CFLAGS += -D"EVENT_THREAD_STACKSIZE_DEFAULT"=\(3*THREAD_STACKSIZE_DEFAULT\)
 ifeq (0, $(ASYNC))
   CFLAGS += -D"DNS_TRANSPORT_SYNC"
 endif
+ifneq (,$(WHITELIST_NAME))
+  CFLAGS += -D"WHITELIST_NAME=\"$(WHITELIST_NAME)\""
+endif
 
 DOCKER_ENV_VARS += ASYNC
 DOCKER_ENV_VARS += DEFAULT_CHANNEL
@@ -143,6 +148,7 @@ DOCKER_ENV_VARS += SITE_PREFIX
 DOCKER_ENV_VARS += STATIC_ROUTES
 DOCKER_ENV_VARS += TAP
 DOCKER_ENV_VARS += USEMODULE
+DOCKER_ENV_VARS += WHITELIST_NAME
 DOCKER_MAKE_ARGS ?= -j
 
 include $(RIOTBASE)/Makefile.include
