--- a/06-07-evaluation/scripts/exp_ctrl/tox.ini
+++ b/06-07-evaluation/scripts/exp_ctrl/tox.ini
@@ -34,7 +34,9 @@ deps =
 commands =
     pylint --rcfile=setup.cfg \
         create_load_descs.py \
+        create_proxy_24_descs.py \
         create_proxy_descs.py \
+        create_max_age_24_descs.py \
         create_max_age_descs.py \
         dispatch_load_experiments.py \
         dispatch_proxy_experiments.py \
