Rebase RIOT to 2022.07 branch

--- a/06-07-evaluation/apps/proxy/app.config
+++ b/06-07-evaluation/apps/proxy/app.config
@@ -5,6 +5,8 @@ CONFIG_KCONFIG_USEMODULE_NANOCOAP=y
 CONFIG_KCONFIG_USEMODULE_NANOCOAP_CACHE=y
 CONFIG_GNRC_IPV6_NIB_NUMOF=8
 CONFIG_GNRC_PKTBUF_SIZE=3072
+CONFIG_GCOAP_PDU_BUF_SIZE=228
 CONFIG_GCOAP_REQ_WAITING_MAX=51
 CONFIG_GCOAP_RESEND_BUFS_MAX=51
 CONFIG_NANOCOAP_CACHE_ENTRIES=50
+CONFIG_NANOCOAP_CACHE_RESPONSE_SIZE=228
