--- a/06-07-evaluation/apps/requester/coap_cache.config
+++ b/06-07-evaluation/apps/requester/coap_cache.config
@@ -1,3 +1,4 @@
 CONFIG_KCONFIG_USEMODULE_NANOCOAP=y
 CONFIG_KCONFIG_USEMODULE_NANOCOAP_CACHE=y
 CONFIG_NANOCOAP_CACHE_ENTRIES=8
+CONFIG_NANOCOAP_CACHE_RESPONSE_SIZE=228
