RIOT/apps/exp_ctrl: add support for upstream forward proxies

--- a/06-07-evaluation/apps/proxy/Makefile
+++ b/06-07-evaluation/apps/proxy/Makefile
@@ -17,7 +17,7 @@ USEMODULE += auto_init_gnrc_rpl
 USEMODULE += ipv4_addr
 USEMODULE += ipv6_addr
 USEMODULE += gcoap
-USEMODULE += gcoap_forward_proxy
+USEMODULE += gcoap_forward_proxy_upstream
 USEMODULE += gnrc_icmpv6_echo
 USEMODULE += gnrc_ipv6_router_default
 USEMODULE += gnrc_pktbuf_cmd
