--- a/06-07-evaluation/scripts/exp_ctrl/tox.ini
+++ b/06-07-evaluation/scripts/exp_ctrl/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,flake8,black,{py37,py38,py39,py310}-{test}
+envlist = lint,flake8,black,{py37,py38,py39,py310,py311}-{test}
 skip_missing_interpreters = true
 skipsdist = true
 
