--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "liboscore"]
 	path = 06-07-evaluation/liboscore
 	url = https://gitlab.com/oscore/liboscore.git
+[submodule "06-07-evaluation/quant"]
+	path = 06-07-evaluation/quant
+	url = https://github.com/NTAP/quant
