--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -59,6 +59,7 @@ jobs:
       if: contains(matrix.script_collection, 'plot')
       run: |
         sudo apt-get update
+        sudo apt-get upgrade
         sudo apt-get install cm-super-minimal dvipng python3-matplotlib \
           texlive texlive-latex-extra texlive-fonts-extra tshark
     - name: Test ${{ matrix.script_collection }} scripts
